--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,43 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 
 # Auto-commit
 spring.datasource.hikari.auto-commit=true
+
+# Virtual threads
+spring.threads.virtual.enabled=true
+
+# ===========================================
+# Redis Cache Configuration
+# ===========================================
+
+# Redis connection
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+# spring.data.redis.password=yourpassword  # Uncomment if Redis requires auth
+
+# Connection pool (using Lettuce - Spring Boot default)
+spring.data.redis.lettuce.pool.max-active=50
+spring.data.redis.lettuce.pool.max-idle=10
+spring.data.redis.lettuce.pool.min-idle=5
+spring.data.redis.lettuce.pool.max-wait=1000ms
+
+# Connection timeout
+spring.data.redis.timeout=2000ms
+
+# ===========================================
+# TinyURL Cache Settings
+# ===========================================
+
+# TTL for cached URLs in hours (default: 24 hours)
+# URLs are immutable, so long TTL is fine
+# TTL is refreshed on each access (hot URLs stay cached indefinitely)
+cache.url.ttl-hours=24
+
+# ===========================================
+# Click Tracking Settings
+# ===========================================
+
+# How often to flush accumulated click counts from Redis to DB (in ms)
+# Default: 60000 (1 minute)
+# Lower = more accurate counts but more DB writes
+# Higher = fewer DB writes but counts are more delayed
+click.flush.interval-ms=60000
