refactored code and added global exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,17 @@ spring.application.name=tinyurl
 
 snowflake.generator.baseUrl=http://127.0.0.1:8081
 
+# ===========================================
 # MySQL config for local development
+# ===========================================
 spring.datasource.url=jdbc:mysql://localhost:3306/tinyurl_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ===========================================
+# Logging Settings
+# ===========================================
 logging.file.name=app.log
 logging.logback.rollingpolicy.max-file-size=100MB
 logging.logback.rollingpolicy.max-history=30
@@ -76,21 +81,8 @@ spring.data.redis.lettuce.pool.max-wait=1000ms
 # Connection timeout
 spring.data.redis.timeout=2000ms
 
-# ===========================================
-# TinyURL Cache Settings
-# ===========================================
-
 # TTL for cached URLs in hours (default: 24 hours)
-# URLs are immutable, so long TTL is fine
-# TTL is refreshed on each access (hot URLs stay cached indefinitely)
 cache.url.ttl-hours=24
 
-# ===========================================
-# Click Tracking Settings
-# ===========================================
-
 # How often to flush accumulated click counts from Redis to DB (in ms)
-# Default: 60000 (1 minute)
-# Lower = more accurate counts but more DB writes
-# Higher = fewer DB writes but counts are more delayed
 click.flush.interval-ms=60000
