--- a/build.gradle
+++ b/build.gradle
@@ -27,26 +27,23 @@ repositories {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-micrometer-tracing-brave'
-//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-//    implementation 'org.springframework.boot:spring-boot-starter-opentelemetry'
     implementation 'org.springframework.boot:spring-boot-starter-webmvc'
-//    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
-//    runtimeOnly 'io.micrometer:micrometer-registry-otlp'
     annotationProcessor 'org.projectlombok:lombok'
-//    testImplementation 'org.springframework.boot:spring-boot-micrometer-tracing-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-jdbc-test'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
-//    testImplementation 'org.springframework.boot:spring-boot-starter-opentelemetry-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$swaggerVersion"
+    // Metrics and monitoring
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
+    // AOP for @TimedOperation annotation
+    implementation "org.springframework.boot:spring-boot-starter-aop:$aopVersion"
 }
 
 dependencyManagement {
